--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.6",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.4",
     "request": "^2.88.2"
   }
 }
